src/App.css
#app {
  background-color: var(--surface);
  height: 100vh;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

blockquote {
  color: var(--primary);
}

a, a:visited, a:hover {
  color: var(--on-surface);
  text-decoration: none;
  font-weight: bold;
}

p {
  margin: 0;
}

p, blockquote {
  max-width: 80vw;
}

